--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,13 @@
     <title>Title</title>
 </head>
 <body>
-
+<nav>
+    <ul>
+        <li><a href="/test">Test</a></li>
+        <li><a href="/testRecord">Record</a></li>
+        <li><a href="/request">Request New Account</a></li>
+        <li><a href="/dashboard">Your Request Dashboard</a></li>
+    </ul>
+</nav>
 </body>
 </html>
