--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,22 +6,54 @@
     <title>Ndx Validate</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-</head>
-
-<body>
-<nav>
-    <ul>
-        <li><a href="/test">Test</a></li>
-        <li><a href="/testRecord">Record</a></li>
-        <li><a href="/request">Request New Account</a></li>
-        <li><a href="/dashboard">Your Request Dashboard</a></li>
-    </ul>
-</nav>
-</body>
-<footer >
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/2effb491bc.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/js/main.js"></script>
+</head>
+
+<body>
+<div class="wrapper">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-blue nav-bottom-green">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">CAVE</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="/dashboard" class="nav-link">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/request" class="nav-link">Request New Account</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#documentation" class="nav-link">Documentation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/processed/requests/complete" class="nav-link">Request Archive</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/logout" class="nav-link">Sign Out</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div id="wrapper">
+        <div class="jumbotron text-center" id="jumbo">
+            <h1>Welcome to the CAVE request processor</h1>
+            <h3>This project aims to make the new account creation seamless</h3>
+            <h3></h3>
+
+        <div class="push"></div>
+        </div>
+
+    </div>
+</body>
+
+<footer class="footer">
+    CAVE integration brought to you by Mary Olowu and Nathan Maloney
 </footer>
 </html>
